Implement new FancyHttpClient stuff